--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -347,19 +347,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'P Value'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [160]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m anova \u001b[38;5;241m=\u001b[39m (pd\u001b[38;5;241m.\u001b[39mDataFrame(anova))\u001b[38;5;241m.\u001b[39mtranspose() \n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mtype\u001b[39m(anova)\n\u001b[1;32m---> 11\u001b[0m anova\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mvalues[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP Value\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'P Value'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>F Statistic</th>\n",
+       "      <th>P Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>One Way Anova Test</th>\n",
+       "      <td>1803.178126</td>\n",
+       "      <td>1.599857e-121</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    F Statistic        P Value\n",
+       "One Way Anova Test  1803.178126  1.599857e-121"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -373,9 +406,11 @@
     "\n",
     "type(anova)\n",
     "\n",
-    "anova.columns.values[0:1] = ['P Value']\n",
+    "anova.columns = ['F Statistic','P Value']\n",
     "\n",
-    "#anova"
+    "anova.index = ['One Way Anova Test']\n",
+    "\n",
+    "anova"
    ]
   },
   {
@@ -387,11 +422,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Yes.  The p value is very small, indicating that that there is very little chance such a difference would occur purely by random chance.  So, assuming there isn't some bias in the data set, there is good evidence of a true difference."
+   ]
   },
   {
    "cell_type": "markdown",
