--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -450,11 +450,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total</th>\n",
+       "      <th>speeding</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>not_distracted</th>\n",
+       "      <th>no_previous</th>\n",
+       "      <th>ins_premium</th>\n",
+       "      <th>ins_losses</th>\n",
+       "      <th>abbrev</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.8</td>\n",
+       "      <td>7.332</td>\n",
+       "      <td>5.640</td>\n",
+       "      <td>18.048</td>\n",
+       "      <td>15.040</td>\n",
+       "      <td>784.55</td>\n",
+       "      <td>145.08</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18.1</td>\n",
+       "      <td>7.421</td>\n",
+       "      <td>4.525</td>\n",
+       "      <td>16.290</td>\n",
+       "      <td>17.014</td>\n",
+       "      <td>1053.48</td>\n",
+       "      <td>133.93</td>\n",
+       "      <td>AK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.6</td>\n",
+       "      <td>6.510</td>\n",
+       "      <td>5.208</td>\n",
+       "      <td>15.624</td>\n",
+       "      <td>17.856</td>\n",
+       "      <td>899.47</td>\n",
+       "      <td>110.35</td>\n",
+       "      <td>AZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22.4</td>\n",
+       "      <td>4.032</td>\n",
+       "      <td>5.824</td>\n",
+       "      <td>21.056</td>\n",
+       "      <td>21.280</td>\n",
+       "      <td>827.34</td>\n",
+       "      <td>142.39</td>\n",
+       "      <td>AR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.200</td>\n",
+       "      <td>3.360</td>\n",
+       "      <td>10.920</td>\n",
+       "      <td>10.680</td>\n",
+       "      <td>878.41</td>\n",
+       "      <td>165.63</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   total  speeding  alcohol  not_distracted  no_previous  ins_premium  \\\n",
+       "0   18.8     7.332    5.640          18.048       15.040       784.55   \n",
+       "1   18.1     7.421    4.525          16.290       17.014      1053.48   \n",
+       "2   18.6     6.510    5.208          15.624       17.856       899.47   \n",
+       "3   22.4     4.032    5.824          21.056       21.280       827.34   \n",
+       "4   12.0     4.200    3.360          10.920       10.680       878.41   \n",
+       "\n",
+       "   ins_losses abbrev  \n",
+       "0      145.08     AL  \n",
+       "1      133.93     AK  \n",
+       "2      110.35     AZ  \n",
+       "3      142.39     AR  \n",
+       "4      165.63     CA  "
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "carcrash_data = sns.load_dataset('car_crashes')"
+    "carcrash_data = sns.load_dataset('car_crashes')\n",
+    "\n",
+    "carcrash_data.head()"
    ]
   },
   {
@@ -477,10 +591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ME' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [167]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m Northeast \u001b[38;5;241m=\u001b[39m [\u001b[43mME\u001b[49m, NH, VT, MA, RI, CT, NY, NJ, PA]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ME' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Northeast = ['ME', 'NH', 'VT', 'MA', 'RI', 'CT', 'NY', 'NJ', 'PA']\n",
+    "Midwest= ['OH', 'MI', 'IN', 'WI', 'IL', 'MN', 'IA', 'MO', 'ND', 'SD', 'NE', 'KS']\n",
+    "South = ['DE', 'MD, VA, WV, KY, NC, SC, TN, GA, FL, AL, MS, AR, LA, TX, OK]\n",
+    "\n",
+    "#carcrash_data['region'] = df['Country'].map(region_df.set_index('Country')['Region'])"
+   ]
   },
   {
    "cell_type": "markdown",
