--- a/DAT301 Project 2.ipynb
+++ b/DAT301 Project 2.ipynb
@@ -214,8 +214,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "59ff89c9-2a27-4787-922c-e8e7551827b3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#\"Letter\" column in each df is the same, so two of them are being concantenated without it\n",
+    "temp = pd.concat([EssayFrequency_df, ResumeFrequency_df.drop(['Letter'], axis = 1, inplace = False)], axis = 1, join = 'outer')\n",
+    "\n",
+    "merged_data = pd.concat([temp, LabFrequency_df.drop(['Letter'], axis = 1, inplace = False)], axis = 1, join = 'outer')\n",
+    "\n",
+    "merged_data.dropna(inplace = True)\n",
+    "\n",
+    "merged_data.columns = [\"Letter\", \"Essay\", \"Resume\", \"Lab\"]\n",
+    "\n",
+    "frequency_proportions = merged_data.copy()\n",
+    "\n",
+    "temp = frequency_proportions.iloc[:, 1:4]\n",
+    "\n",
+    "frequency_proportions.iloc[:, 1:4] = temp/sum(temp)\n",
+    "\n",
+    "frequency_proportions.columns = [\"Letter\", \"Essay\", \"Resume\", \"Lab\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a33bcb60-97da-44a4-ac96-03a36cff8e2b",
+   "metadata": {},
+   "source": [
+    "                                                         Get Summary Stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd42d6e3-6311-40e6-bfd2-aee355f7183f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Since the data was sorted by letter in the previous step, each frequency category doesn't need its own separate letter category, hence, I dropped that column from the resume and lab df's, keeping it on the essay df, and then concantenate them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a110a5b0-0df2-4637-be66-dad0d2776c92",
    "metadata": {
     "tags": []
    },
@@ -233,294 +278,123 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
-       "      <th>Letter</th>\n",
-       "      <th>Essay Frequency</th>\n",
-       "      <th>Resume Frequency</th>\n",
-       "      <th>Lab Frequency</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Letter Counts</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Letter Proportions</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Essay</th>\n",
+       "      <th>Resume</th>\n",
+       "      <th>Lab</th>\n",
+       "      <th>Essay</th>\n",
+       "      <th>Resume</th>\n",
+       "      <th>Lab</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a</td>\n",
-       "      <td>0.088610</td>\n",
-       "      <td>0.081241</td>\n",
-       "      <td>996</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>530.85</td>\n",
+       "      <td>110.31</td>\n",
+       "      <td>479.58</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.038</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>b</td>\n",
-       "      <td>0.011810</td>\n",
-       "      <td>0.012901</td>\n",
-       "      <td>187</td>\n",
+       "      <th>std</th>\n",
+       "      <td>477.23</td>\n",
+       "      <td>95.49</td>\n",
+       "      <td>392.42</td>\n",
+       "      <td>0.035</td>\n",
+       "      <td>0.033</td>\n",
+       "      <td>0.031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>c</td>\n",
-       "      <td>0.047095</td>\n",
-       "      <td>0.064505</td>\n",
-       "      <td>448</td>\n",
+       "      <th>min</th>\n",
+       "      <td>7.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>14.00</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>d</td>\n",
-       "      <td>0.036444</td>\n",
-       "      <td>0.037657</td>\n",
-       "      <td>448</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>189.00</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td>197.00</td>\n",
+       "      <td>0.014</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>e</td>\n",
-       "      <td>0.137734</td>\n",
-       "      <td>0.104603</td>\n",
-       "      <td>1471</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>332.00</td>\n",
+       "      <td>93.00</td>\n",
+       "      <td>375.00</td>\n",
+       "      <td>0.024</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>0.030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>f</td>\n",
-       "      <td>0.022316</td>\n",
-       "      <td>0.011855</td>\n",
-       "      <td>299</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>864.25</td>\n",
+       "      <td>185.00</td>\n",
+       "      <td>810.75</td>\n",
+       "      <td>0.063</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.065</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>g</td>\n",
-       "      <td>0.014998</td>\n",
-       "      <td>0.031381</td>\n",
-       "      <td>244</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>h</td>\n",
-       "      <td>0.045138</td>\n",
-       "      <td>0.021618</td>\n",
-       "      <td>521</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>i</td>\n",
-       "      <td>0.071874</td>\n",
-       "      <td>0.103905</td>\n",
-       "      <td>932</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>j</td>\n",
-       "      <td>0.000580</td>\n",
-       "      <td>0.004533</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>k</td>\n",
-       "      <td>0.004202</td>\n",
-       "      <td>0.003138</td>\n",
-       "      <td>97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>l</td>\n",
-       "      <td>0.040719</td>\n",
-       "      <td>0.042190</td>\n",
-       "      <td>635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>m</td>\n",
-       "      <td>0.024199</td>\n",
-       "      <td>0.033473</td>\n",
-       "      <td>311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>n</td>\n",
-       "      <td>0.074989</td>\n",
-       "      <td>0.074268</td>\n",
-       "      <td>726</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>o</td>\n",
-       "      <td>0.066005</td>\n",
-       "      <td>0.048815</td>\n",
-       "      <td>863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>p</td>\n",
-       "      <td>0.020867</td>\n",
-       "      <td>0.025453</td>\n",
-       "      <td>276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>q</td>\n",
-       "      <td>0.000507</td>\n",
-       "      <td>0.001743</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>r</td>\n",
-       "      <td>0.052456</td>\n",
-       "      <td>0.064505</td>\n",
-       "      <td>846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>s</td>\n",
-       "      <td>0.068396</td>\n",
-       "      <td>0.076360</td>\n",
-       "      <td>839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>t</td>\n",
-       "      <td>0.091001</td>\n",
-       "      <td>0.086471</td>\n",
-       "      <td>1152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>u</td>\n",
-       "      <td>0.023910</td>\n",
-       "      <td>0.034519</td>\n",
-       "      <td>439</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>v</td>\n",
-       "      <td>0.021736</td>\n",
-       "      <td>0.006974</td>\n",
-       "      <td>267</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>w</td>\n",
-       "      <td>0.013259</td>\n",
-       "      <td>0.008717</td>\n",
-       "      <td>227</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>x</td>\n",
-       "      <td>0.003115</td>\n",
-       "      <td>0.002441</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>y</td>\n",
-       "      <td>0.017244</td>\n",
-       "      <td>0.014993</td>\n",
-       "      <td>164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>z</td>\n",
-       "      <td>0.000797</td>\n",
-       "      <td>0.001743</td>\n",
-       "      <td>14</td>\n",
+       "      <th>max</th>\n",
+       "      <td>1901.00</td>\n",
+       "      <td>300.00</td>\n",
+       "      <td>1471.00</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>0.118</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Letter  Essay Frequency  Resume Frequency  Lab Frequency\n",
-       "0       a         0.088610          0.081241            996\n",
-       "1       b         0.011810          0.012901            187\n",
-       "2       c         0.047095          0.064505            448\n",
-       "3       d         0.036444          0.037657            448\n",
-       "4       e         0.137734          0.104603           1471\n",
-       "5       f         0.022316          0.011855            299\n",
-       "6       g         0.014998          0.031381            244\n",
-       "7       h         0.045138          0.021618            521\n",
-       "8       i         0.071874          0.103905            932\n",
-       "9       j         0.000580          0.004533             18\n",
-       "10      k         0.004202          0.003138             97\n",
-       "11      l         0.040719          0.042190            635\n",
-       "12      m         0.024199          0.033473            311\n",
-       "13      n         0.074989          0.074268            726\n",
-       "14      o         0.066005          0.048815            863\n",
-       "15      p         0.020867          0.025453            276\n",
-       "16      q         0.000507          0.001743             32\n",
-       "17      r         0.052456          0.064505            846\n",
-       "18      s         0.068396          0.076360            839\n",
-       "19      t         0.091001          0.086471           1152\n",
-       "20      u         0.023910          0.034519            439\n",
-       "21      v         0.021736          0.006974            267\n",
-       "22      w         0.013259          0.008717            227\n",
-       "23      x         0.003115          0.002441             17\n",
-       "24      y         0.017244          0.014993            164\n",
-       "25      z         0.000797          0.001743             14"
+       "     Letter Counts                   Letter Proportions              \n",
+       "             Essay  Resume      Lab               Essay Resume    Lab\n",
+       "mean        530.85  110.31   479.58               0.038  0.038  0.038\n",
+       "std         477.23   95.49   392.42               0.035  0.033  0.031\n",
+       "min           7.00    5.00    14.00               0.001  0.002  0.001\n",
+       "25%         189.00   27.25   197.00               0.014  0.010  0.016\n",
+       "50%         332.00   93.00   375.00               0.024  0.032  0.030\n",
+       "75%         864.25  185.00   810.75               0.063  0.065  0.065\n",
+       "max        1901.00  300.00  1471.00               0.138  0.105  0.118"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#\"Letter\" column in each df is the same, so two of them are being concantenated without it\n",
-    "temp = pd.concat([EssayFrequency_df, ResumeFrequency_df.drop(['Letter'], axis = 1, inplace = False)], axis = 1, join = 'outer')\n",
-    "\n",
-    "merged_data = pd.concat([temp, LabFrequency_df.drop(['Letter'], axis = 1, inplace = False)], axis = 1, join = 'outer')\n",
-    "\n",
-    "merged_data.dropna(inplace = True)\n",
-    "\n",
-    "frequency_proportions = merged_data.copy()\n",
-    "\n",
-    "temp = frequency_proportions.iloc[:, 1:3]\n",
-    "\n",
-    "frequency_proportions.iloc[:, 1:3] = temp/sum(temp)\n",
-    "\n",
-    "frequency_proportions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be7ac628-5652-4d73-8892-256c8103c284",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "                                                         Get Summary Stats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cd42d6e3-6311-40e6-bfd2-aee355f7183f",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "Since the data was sorted by letter in the previous step, each frequency category doesn't need its own separate letter category, hence, I dropped that column from the resume and lab df's, keeping it on the essay df, and then concantenate them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a110a5b0-0df2-4637-be66-dad0d2776c92",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "SummaryStats = (merged_data.describe()).round(decimals = 2)\n",
     "\n",
-    "SummaryStats"
+    "SummaryStats_Proportions = (frequency_proportions.describe()).round(decimals = 3)\n",
+    "\n",
+    "summary_stats = pd.concat([SummaryStats, SummaryStats_Proportions], axis = 1, join = 'outer', \n",
+    "                           keys = ['Letter Counts', ' Letter Proportions'])\n",
+    "\n",
+    "summary_stats.drop('count', inplace = True)\n",
+    "\n",
+    "summary_stats"
    ]
   },
   {
